Add nearby devices service to server
